# df-subsocial-parachain

./: Cargo.toml
docker/: Dockerfile  rco-validators-compose.yml
docker/keys/: aura-1.json
docker/local/: subsocial-collator-compose.yml
pallets/moderation/: Cargo.toml
pallets/parachain-info/: Cargo.toml
pallets/parachain-info/src/: lib.rs
pallets/permissions/: Cargo.toml
pallets/post-history/: Cargo.toml
pallets/posts/: Cargo.toml
pallets/profile-follows/: Cargo.toml
pallets/profile-history/: Cargo.toml
pallets/profiles/: Cargo.toml
pallets/reactions/: Cargo.toml
pallets/roles/: Cargo.toml
pallets/scores/: Cargo.toml
pallets/session-keys/: Cargo.toml
pallets/space-follows/: Cargo.toml
pallets/space-history/: Cargo.toml
pallets/space-multi-ownership/: Cargo.toml
pallets/space-ownership/: Cargo.toml
pallets/spaces/: Cargo.toml
pallets/utils/: Cargo.toml
primitives/: Cargo.toml
primitives/src/: lib.rs
res/: rococo-local.json  rococo.json  subsocial.json
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: export-state-and-wasm.sh
src/: chain_spec.rs  command.rs  service.rs
